--- a/source/demo/index.html
+++ b/source/demo/index.html
@@ -1,18 +1,15 @@
-<ol>
-    <li><a target="_blank" href="react-clock/index.html">React.js实现的时钟组件</a></li>
-    <li><a target="_blank" href="web-worker-test/index.html">webworker + pako 本地压缩</a></li>
-    <li><a target="_blank" href="react-todo-list/index.html" title="简单的 react todo list">一个简单的 react-todo-list</a></li>
-    <li><a target="_blank" href="canvas-filter/index.html">canvas 滤镜效果</a></li>
-    <li><a target="_blank" href="webRTC/index.html">拍照</a></li>
-    <li><a target="_blank" href="pictureView/index.html">一个图片全屏查看组件</a></li>
-    <li><a target="_blank" href="actionSheet/index.html">扒的actionSheet</a></li>
-    <li><a target="_blank" href="red.html">哈哈哈,写给群友玩的红包雨</a></li>
-    <li><a target="_blank" href="square.html">盒子等比缩放?</a></li>
-    <li><a target="_blank" href="vibrate.html">html5震动api</a></li>
-    <li><a target="_blank" href="todolist/index.html">一个jq实现的todo list</a></li>
-    <li><a target="_blank" href="tangram">css 实现的七巧板 -_-!</a></li>
-    <li><a target="_blank" href="server-sent-events">(服务器推送)server-sent-events测试</a></li>
-    <li><a target="_blank" href="input-appearance">自定义input控件样式</a></li>
-    <li><a target="_blank" href="html5-promise">html5-promise测试</a></li>
-    <li><a target="_blank" href="calc-vm-rem">vm-rem换算...</a></li>
-</ol>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>demo</title>
+    <script>
+    window.location = '/demo-entry';
+    </script>
+</head>
+<body>
+    
+</body>
+</html>
