--- a/source/demo/server-sent-events/index.html
+++ b/source/demo/server-sent-events/index.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-下面的时间会5秒钟更新一次
+下面的时间会1秒钟更新一次
 <div class="box"></div>
 <script>
-var source = new EventSource('api.php');
+var source = new EventSource('//draw.lyan.me/api/nowTime');
 var box = document.querySelector('.box');
 source.onopen = function(event) {
     box.innerText = 'open事件触发了: 消息' + JSON.stringify(event);
