--- a/source/demo/react-clock/index.html
+++ b/source/demo/react-clock/index.html
@@ -36,7 +36,7 @@
             bottom: 50%;
             transform-origin: 50% 100%;
             transform: rotate(0deg);
-            transition: transform .2s;
+            /* transition: transform .2s; */
         }
         .sec-pointer:after,
         .min-pointer:after,
