--- a/source/demo/web-worker-test/index.html
+++ b/source/demo/web-worker-test/index.html
@@ -47,7 +47,9 @@
 
     var worker = new Worker('zip.js');
     worker.onmessage = function(e) {
-        var str = '<div style="border:1px dashed #ccc; padding:10px; margin-top: 10px; word-wrap: break-word">' + (e.data) + '</div>';
+        console.log(e.data.buffer)
+        var v = '压缩后大小: ' + (e.data.buffer.byteLength / 1024 / 1024);
+        var str = '<div style="border:1px dashed #ccc; padding:10px; margin-top: 10px; word-wrap: break-word">' + v + '</div>';
         log.insertAdjacentHTML('afterbegin', str);
     };
 
@@ -66,6 +68,7 @@
         var data;
         if (type === 'file') {
             data = btnFile.files[0];
+            log.insertAdjacentHTML('afterbegin', data.size / 1024 / 1024 );
         } else if (type === 'char') {
             data = text.value;
         }
