--- a/source/demo/tutu/index.html
+++ b/source/demo/tutu/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>图图</title>
+    <title>刘严谨小朋友</title>
     <style type="text/css">
       .box {
         text-align: center;
@@ -17,10 +17,10 @@
       <p id="jsCurrentTime"></p>
     </div>
     <div class="box">
-      <h1 id="djs"></h1>
+      <h3 id="djs"></h3>
     </div>
     <div class="box">
-      <h1 id="jsBornDay"></h1>
+      <h3 id="jsBornDay"></h3>
     </div>
     <div class="box">
       <img src="./tutu.jpeg" width="300" alt="图图">
