--- a/source/demo/guoqing-avatar/index.html
+++ b/source/demo/guoqing-avatar/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, viewport-fix=cover" />
     <title>国庆微信头像生成器</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="//lyanme.oss-cn-hangzhou.aliyuncs.com/lyan.me/demo/gimages/style.css" />
     <script>
       (function () {
         var remBase = 100;
@@ -30,8 +30,8 @@
       <div class="content">
         <div class="avatar-content">
           <div class="avatar-inner">
-            <img class="avatar-origin" src="./images/s/default.png" alt="" />
-            <img class="avatar-post" src="./images/img2.png" alt="" />
+            <img class="avatar-origin" src="//lyanme.oss-cn-hangzhou.aliyuncs.com/lyan.me/demo/gimages/images/s/default.jpeg" alt="" />
+            <img class="avatar-post" src="//lyanme.oss-cn-hangzhou.aliyuncs.com/lyan.me/demo/gimages/images/img2.png" alt="" />
             <canvas id="canvas" width="400" height="400"></canvas>
           </div>
         </div>
@@ -47,7 +47,8 @@
         <div class="inner"></div>
       </div>
     </div>
-    <script defer="defer" src="/lib/jquery/index.js"></script>
-    <script defer="defer" src="./index.js"></script>
+    <script defer="defer" src="//lyanme.oss-cn-hangzhou.aliyuncs.com/lyan.me/demo/gimages/jquery/index.js"></script>
+    <!-- <script defer="defer" src="//lyanme.oss-cn-hangzhou.aliyuncs.com/lyan.me/demo/gimages/index.js"></script> -->
+    <script defer="defer" src="//lyanme.oss-cn-hangzhou.aliyuncs.com/lyan.me/demo/gimages/index.js"></script>
   </body>
 </html>
