--- a/source/demo/guoqing-avatar/index.html
+++ b/source/demo/guoqing-avatar/index.html
@@ -48,7 +48,7 @@
       </div>
     </div>
     <script defer="defer" src="//lyanme.oss-cn-hangzhou.aliyuncs.com/lyan.me/demo/gimages/jquery/index.js"></script>
-    <!-- <script defer="defer" src="//lyanme.oss-cn-hangzhou.aliyuncs.com/lyan.me/demo/gimages/index.js"></script> -->
     <script defer="defer" src="//lyanme.oss-cn-hangzhou.aliyuncs.com/lyan.me/demo/gimages/index.js"></script>
+    <!-- <script defer="defer" src="./index.js"></script> -->
   </body>
 </html>
